@@ -4,31 +4,36 @@ plugins {
   id 'pmd'
   id 'jacoco'
   id 'io.spring.dependency-management' version '1.0.11.RELEASE'
-  id 'org.springframework.boot' version '2.6.7'
-  id 'org.owasp.dependencycheck' version '6.5.3'
-  id 'com.github.ben-manes.versions' version '0.42.0'
+  id 'org.springframework.boot' version '2.6.2'
+  id 'org.owasp.dependencycheck' version '7.1.1'
+  id 'com.github.ben-manes.versions' version '0.41.0'
   id 'org.sonarqube' version '3.3'
 }
 
 group = 'uk.gov.hmcts.reform'
 version = '0.0.1'
 
-java {
-  toolchain {
-    languageVersion = JavaLanguageVersion.of(17)
-  }
+allprojects {
+  sourceCompatibility = '11'
+  targetCompatibility = '11'
 }
 
-sourceSets {
-  functionalTest {
-    java {
-      compileClasspath += main.output
-      runtimeClasspath += main.output
-      srcDir file('src/functionalTest/java')
-    }
-    resources.srcDir file('src/functionalTest/resources')
-  }
+def versions = [
+  junit           : '5.6.2',
+  junitPlatform   : '1.6.2',
+  pitest             : '1.5.2',
+  reformLogging      : '5.1.7',
+  reformHealthStarter: '0.0.5',
+  serenity           : '2.2.12',
+  springBoot         : '2.6.3',
+  springHystrix      : '2.1.1.RELEASE',
+  springfoxSwagger   : '2.9.2',
+  pact_version       : '4.1.7',
+  jackson            : '2.13.3'
 
+]
+
+sourceSets {
   integrationTest {
     java {
       compileClasspath += main.output
@@ -37,35 +42,10 @@ sourceSets {
     }
     resources.srcDir file('src/integrationTest/resources')
   }
-
-  smokeTest {
-    java {
-      compileClasspath += main.output
-      runtimeClasspath += main.output
-      srcDir file('src/smokeTest/java')
-    }
-    resources.srcDir file('src/smokeTest/resources')
-  }
-}
-
-configurations {
-  functionalTestImplementation.extendsFrom testImplementation
-  functionalTestRuntimeOnly.extendsFrom runtimeOnly
-
-  integrationTestImplementation.extendsFrom testImplementation
-  integrationTestRuntimeOnly.extendsFrom runtimeOnly
-
-  smokeTestImplementation.extendsFrom testImplementation
-  smokeTestRuntimeOnly.extendsFrom runtimeOnly
 }
 
 tasks.withType(JavaCompile) {
-  options.compilerArgs << "-Xlint:unchecked" << "-Werror"
-}
-
-// https://github.com/gradle/gradle/issues/16791
-tasks.withType(JavaExec).configureEach {
-  javaLauncher.set(javaToolchains.launcherFor(java.toolchain))
+  options.compilerArgs << "-Xlint:unchecked" << '-parameters' << '-Xlint:deprecation'
 }
 
 tasks.withType(Test) {
@@ -76,17 +56,6 @@ tasks.withType(Test) {
   }
 }
 
-test {
-  failFast = true
-}
-
-task functional(type: Test) {
-  description = "Runs functional tests"
-  group = "Verification"
-  testClassesDirs = sourceSets.functionalTest.output.classesDirs
-  classpath = sourceSets.functionalTest.runtimeClasspath
-}
-
 task integration(type: Test) {
   description = "Runs integration tests"
   group = "Verification"
@@ -95,25 +64,27 @@ task integration(type: Test) {
   failFast = true
 }
 
-task smoke(type: Test) {
-  description = "Runs Smoke Tests"
-  testClassesDirs = sourceSets.smokeTest.output.classesDirs
-  classpath = sourceSets.smokeTest.runtimeClasspath
-}
-
 checkstyle {
   maxWarnings = 0
-  toolVersion = '9.2.1'
+  toolVersion = '8.29'
   getConfigDirectory().set(new File(rootDir, 'config/checkstyle'))
 }
 
 pmd {
-  toolVersion = "6.41.0"
-  sourceSets = [sourceSets.main, sourceSets.test, sourceSets.functionalTest, sourceSets.integrationTest, sourceSets.smokeTest]
+  toolVersion = "6.5.0"
+  sourceSets = [sourceSets.main, sourceSets.test]
   reportsDir = file("$project.buildDir/reports/pmd")
-  // https://github.com/pmd/pmd/issues/876
-  ruleSets = []
   ruleSetFiles = files("config/pmd/ruleset.xml")
+}
+
+task fortifyScan(type: JavaExec)  {
+  main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
+  classpath += sourceSets.test.runtimeClasspath
+  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
+}
+
+jacoco {
+  toolVersion = "0.8.2"
 }
 
 jacocoTestReport {
@@ -125,13 +96,17 @@ jacocoTestReport {
   }
 }
 
-project.tasks['sonarqube'].dependsOn jacocoTestReport
-project.tasks['check'].dependsOn integration
+project.tasks['sonarqube'].dependsOn test, integration, jacocoTestReport
+check.dependsOn integration
+checkstyleMain.shouldRunAfter(compileJava)
+test.shouldRunAfter(checkstyleTest)
+integration.shouldRunAfter(checkstyleIntegrationTest)
+integration.shouldRunAfter(test)
 
 sonarqube {
   properties {
-    property "sonar.projectName", "Reform :: spring-boot-template"
-    property "sonar.projectKey", "uk.gov.hmcts.reform:spring-boot-template"
+    property "sonar.projectName", "Reform :: ia-case-migration"
+    property "sonar.projectKey", "uk.gov.hmcts.reform:ia-case-migration"
     property "sonar.coverage.jacoco.xmlReportPaths", "${jacocoTestReport.reports.xml.destination.path}"
   }
 }
@@ -150,79 +125,116 @@ dependencyUpdates {
 
 // https://jeremylong.github.io/DependencyCheck/dependency-check-gradle/configuration.html
 dependencyCheck {
-  // Specifies if the build should be failed if a CVSS score above a specified level is identified.
-  // range of 0-10 fails the build, anything greater and it doesn't fail the build
-  failBuildOnCVSS = 0
   suppressionFile = 'config/owasp/suppressions.xml'
 
   analyzers {
     // Disable scanning of .NET related binaries
     assemblyEnabled = false
   }
-  skipConfigurations = [
-    "checkstyle",
-    "compileOnly",
-    "pmd",
-    "integrationTest",
-    "functionalTest",
-    "smokeTest",
-    "contractTestRuntimeClasspath",
-    "contractTestCompileClasspath"
-  ]
 }
 
 repositories {
   mavenLocal()
   mavenCentral()
+
+  jcenter()
+
   maven { url 'https://jitpack.io' }
+
+  maven {
+    url 'https://repo.spring.io/libs-milestone'
+  }
 }
 
 ext {
-  log4JVersion = "2.17.0"
+  reformLoggingVersion = "5.1.9"
+  log4JVersion = '2.18.0'
+}
+
+ext {
+  springCloudVersion = '2021.0.0'
+}
+
+dependencyManagement {
+  dependencies {
+    dependencySet(group: 'org.springframework', version: '5.3.22') {
+      entry 'spring-aop'
+      entry 'spring-aspects'
+      entry 'spring-beans'
+      entry 'spring-context'
+      entry 'spring-context-support'
+      entry 'spring-core'
+      entry 'spring-expression'
+      entry 'spring-jcl'
+      entry 'spring-jdbc'
+      entry 'spring-orm'
+      entry 'spring-tx'
+      entry 'spring-web'
+      entry 'spring-webmvc'
+      entry 'spring-jms'
+      entry 'spring-messaging'
+    }
+
+    dependencySet(group: 'org.springframework.security', version: '5.7.2') {
+      entry 'spring-security-crypto'
+      entry 'spring-security-config'
+      entry 'spring-security-core'
+      entry 'spring-security-web'
+    }
+
+    dependencySet(group: 'commons-io', version: '2.11.0') {
+      entry 'commons-io'
+    }
+
+    imports {
+      mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+    }
+  }
 }
 
 dependencies {
-  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web'
-  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator'
-  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-aop'
-  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-json'
+  implementation('org.springframework.cloud:spring-cloud-starter-bootstrap')
+  implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
 
-  implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: '1.6.7'
+  implementation 'com.github.hmcts.ccd-case-migration-starter:domain:3.0.0'
+  implementation 'com.github.hmcts.ccd-case-migration-starter:processor:3.0.0'
+  implementation 'com.github.hmcts:idam-java-client:2.0.1'
 
-  implementation group: 'com.github.hmcts.java-logging', name: 'logging', version: '6.0.1'
+  annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.24'
+  compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.24'
 
-  // temporary work around for dependency check
-  implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.13.3'
-  implementation group: 'com.fasterxml.jackson', name: 'jackson-bom', version: '2.13.3', ext: 'pom'
+  implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: '1.6.9'
+
+  implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: versions.jackson
+  implementation group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: versions.jackson
+  implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: versions.jackson
+  implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jdk8', version: versions.jackson
+
+
+
+  implementation group: 'com.github.hmcts.java-logging', name: 'logging', version: reformLoggingVersion
+  implementation group: 'com.github.hmcts.java-logging', name: 'logging-appinsights', version: reformLoggingVersion
 
   implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: log4JVersion
   implementation group: 'org.apache.logging.log4j', name: 'log4j-to-slf4j', version: log4JVersion
 
-  implementation group: 'io.rest-assured', name: 'rest-assured'
-
   testImplementation(platform('org.junit:junit-bom:5.8.2'))
-  testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
-  testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', {
-    exclude group: 'junit', module: 'junit'
-    exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
-  }
+  testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test'
+
+  integrationTestImplementation sourceSets.main.runtimeClasspath
+  integrationTestImplementation sourceSets.test.runtimeClasspath
 }
 
-mainClassName = 'uk.gov.hmcts.reform.demo.Application'
+mainClassName = 'uk.gov.hmcts.reform.migration.CaseMigrationRunner'
 
 bootJar {
-  archiveFileName = "spring-boot-template.jar"
+  archiveFileName = "ia-case-migration.jar"
 
   manifest {
     attributes('Implementation-Version': project.version.toString())
   }
 }
 
-// Gradle 7.x issue, workaround from: https://github.com/gradle/gradle/issues/17236#issuecomment-894768083
-rootProject.tasks.named("processSmokeTestResources") {
-  duplicatesStrategy = 'include'
-}
-
 wrapper {
-    distributionType = Wrapper.DistributionType.ALL
+  distributionType = Wrapper.DistributionType.ALL
 }
